[gd_scene load_steps=8 format=2]

[ext_resource path="res://login.gd" type="Script" id=1]
[ext_resource path="res://assets/blue_button_up.png" type="Texture" id=2]
[ext_resource path="res://assets/blue_button_down.png" type="Texture" id=3]
[ext_resource path="res://assets/VarelaRound-Regular.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/blue_entry.png" type="Texture" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[node name="login" type="Control"]
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="main" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 48.0
margin_top = 45.0
margin_right = -52.0
margin_bottom = -55.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="user_info" type="HBoxContainer" parent="main"]
margin_top = 112.0
margin_right = 924.0
margin_bottom = 282.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="main/user_info"]
margin_left = 367.0
margin_right = 557.0
margin_bottom = 170.0

[node name="email_label" type="Label" parent="main/user_info/VBoxContainer"]
margin_right = 190.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 4 )
text = "Email:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="email_rect" type="TextureRect" parent="main/user_info/VBoxContainer"]
margin_top = 34.0
margin_right = 190.0
margin_bottom = 83.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="email" type="LineEdit" parent="main/user_info/VBoxContainer/email_rect"]
margin_left = 7.0
margin_top = 9.0
margin_right = 355.0
margin_bottom = 49.0
rect_scale = Vector2( 0.5, 0.7 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 4 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "test@email.com"
caret_blink = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="password_label" type="Label" parent="main/user_info/VBoxContainer"]
margin_top = 87.0
margin_right = 190.0
margin_bottom = 117.0
custom_fonts/font = ExtResource( 4 )
text = "Password:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="password_rect" type="TextureRect" parent="main/user_info/VBoxContainer"]
margin_top = 121.0
margin_right = 190.0
margin_bottom = 170.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="password" type="LineEdit" parent="main/user_info/VBoxContainer/password_rect"]
margin_left = 7.0
margin_top = 9.0
margin_right = 355.0
margin_bottom = 49.0
rect_scale = Vector2( 0.5, 0.7 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 4 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Password!!!"
secret = true
caret_blink = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="buttons1" type="HBoxContainer" parent="main"]
margin_top = 286.0
margin_right = 924.0
margin_bottom = 335.0
alignment = 1

[node name="login" type="TextureButton" parent="main/buttons1"]
margin_left = 270.0
margin_right = 460.0
margin_bottom = 49.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="RichTextLabel" parent="main/buttons1/login"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -86.5
margin_top = -17.0
margin_right = 86.5
margin_bottom = 17.0
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "[center]Login[/center]"
text = "Login"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="register" type="TextureButton" parent="main/buttons1"]
margin_left = 464.0
margin_right = 654.0
margin_bottom = 49.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="RichTextLabel" parent="main/buttons1/register"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -86.5
margin_top = -17.0
margin_right = 86.5
margin_bottom = 17.0
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "[center]Register[/center]"
text = "Register"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="buttons2" type="HBoxContainer" parent="main"]
margin_top = 339.0
margin_right = 924.0
margin_bottom = 388.0
alignment = 1

[node name="delete" type="TextureButton" parent="main/buttons2"]
margin_left = 270.0
margin_right = 460.0
margin_bottom = 49.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="RichTextLabel" parent="main/buttons2/delete"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -86.5
margin_top = -17.0
margin_right = 86.5
margin_bottom = 17.0
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "[center]Delete[/center]"
text = "Delete"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="connect" type="TextureButton" parent="main/buttons2"]
margin_left = 464.0
margin_right = 654.0
margin_bottom = 49.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="RichTextLabel" parent="main/buttons2/connect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -86.5
margin_top = -17.0
margin_right = 86.5
margin_bottom = 17.0
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "[center]Connect[/center]"
text = "Connect"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
[connection signal="pressed" from="main/buttons1/login" to="." method="_on_login_pressed"]
[connection signal="pressed" from="main/buttons1/register" to="." method="_on_register_pressed"]
[connection signal="pressed" from="main/buttons2/delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="main/buttons2/connect" to="." method="_on_connect_pressed"]
